--- a/app/assets/stylesheets/survey.css
+++ b/app/assets/stylesheets/survey.css
@@ -15,6 +15,7 @@
   width: 60%;
   border-radius: 10px;
   text-align: center;
+  font-size: 20px;
 }
 
 .pdf-links {
@@ -28,6 +29,7 @@
   border-radius: 10px;
   padding:10px;
   width:40%;
+  font-size: 16px;
 }
 
 #latest-news ul {
@@ -39,10 +41,11 @@
   display: block;
   position: relative;
   margin: auto;
-  width: 95%;
-  height: 500px;
+  width: 65%;
+  height: 400px;
   background-color: #D1F0F4;
-  padding-bottom:10px;
+  margin-bottom:2%;
+  margin-top:1%;
 }
 
 .light-blue-bg-color {
@@ -52,4 +55,5 @@
 .bree-font {
   font-family: 'Bree Serif', serif;
   color:#004C81;
+  font-size: 36px;
 }
